@@ -1,5 +1,9 @@
 2001-12-20  Bradford Hovinen  <hovinen@ximian.com>
 
+	* gconf-property-editor.c: Eliminate compiler warnings
+
+	* capplet-util.c: Eliminate compiler warnings
+
 	* gconf-property-editor.c (gconf_peditor_new): Fold the callback
 	back in; accept variable argument list with extra parameters
 	(gconf_peditor_new_filename): Return the property editor
